testes com word2vec e lstm